Brand new style for pubs index and show pages.  Fixed alignment problem in header of event index boxes.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -120,7 +120,8 @@ a > img { border:none; }
 .link-cell ul { list-style: none outside; padding: 0;}
 .link-cell li { margin: 0 0 1em;}
 
-.yellow-hr { color:#ffcc00; background-color:#ffcc00; height:1px; border:none; clear: both; }
+hr.yellow-hr { color:#ffcc00; background-color:#ffcc00; height:1px; border:none; clear: both; }
+hr.blue { color:#98C5DA; background-color:#98C5DA; height:1px; border:none; clear: both; }
 
 #research-objectives div { float:left; vertical-align:top; margin-right:1.5em; margin-bottom:3em; }
 #research-objectives ul { list-style:none outside url(../images/objectives-bullet.jpg); width:425px; padding-left:20px; }
@@ -137,13 +138,6 @@ a > img { border:none; }
 #home-pubs ul p, #home-news ul p { color:gray; font-style:italic; margin:0; padding:0; }
 #home-pubs p { margin-left: 1.5em;}
 
-/*
-#pubs-index { padding:1em; }
-#pubs-index ul { list-style:none outside url(../images/paper-icon.jpg); margin:0 1em 0; padding:0; }
-#pubs-index ul li, #home-news ul li { margin-bottom:1em; }
-#pubs-index ul p.journal-info { color:gray; font-style:italic; margin:0; padding:0; }
-*/
-
 /* People Index */
 #sterling-blurb { width:30em; padding: 1em;}
 #sterling-photo { vertical-align:bottom; }
@@ -158,18 +152,17 @@ a > img { border:none; }
 .people-list h4 { margin:0; padding:0; font-size:11px; color: gray; line-height: normal;}
 .people-list p { margin:0; padding:0; font-size:0.9em; }
 
-#events-list { list-style:none; padding:0; }
-#events-list li { margin-bottom:2em; }
-#events-list img { float:left; margin-right:1em; }
-
-#events-list li h3 { font-weight: bold; margin:0; padding:0.5em; background-color:#eee; border:solid thin #ddd;
+#events-list li div.event-header { overflow:auto; 
+font-weight: bold; margin:0; padding:0.5em; background-color:#eee; border:solid thin #ddd;
 	-webkit-border-top-left-radius:10px; -webkit-border-top-right-radius:10px; 
 	-moz-border-radius-topleft:10px; -moz-border-radius-topright:10px;
 	border-top-left-radius:10px; border-top-right-radius:10px;
 }
-
-.right-date { float: right; font-size:small; }
-
+#events-list li div.event-header h3 { float:left; margin:0; padding:0; }
+#events-list li div.event-header h4 { float:right; margin:0; padding:0; }
+#events-list { list-style:none; padding:0; }
+#events-list li { margin-bottom:2em; }
+#events-list img { float:left; margin-right:1em; }
 #events-list li div.event-content { padding:0.5em; border:solid thin #ddd; 
 	-webkit-border-bottom-left-radius:5px; -webkit-border-bottom-right-radius:5px; 
 	-moz-border-bottom-left-radius:5px; -moz-border-bottom-right-radius:5px; 
@@ -187,13 +180,39 @@ a > img { border:none; }
     visibility: hidden; margin:0; padding:0;
 }
 
-#pubs-list { list-style:none; overflow:auto; width:100%; padding:0; text-align:center; }
-#pubs-list li { position:relative; width:290px; height:18em; border:dotted thin gray; float:left; padding:10px; 
-	background-color:#f7f7f7; }
-#pubs-list li:hover { background-color:#e8e8e8;}
-#pubs-list li p.pub-authors { font-size:smaller; color:gray; margin:0 2em;}
-#pubs-list li p.pub-footer { position:absolute; bottom:0; right:1em; }
-#pubs-list li div.hidden { display:none; }
+/*  Publications index */
+#pubs-list { list-style:none; padding:0; width:55%; }
+#pubs-list li { 
+	position:relative; padding:0.5em 1em; text-align:right;
+	-webkit-border-top-left-radius:20px;
+	-webkit-border-bottom-left-radius:20px;
+	-moz-border-radius-topleft:20px;
+	-moz-border-radius-bottomleft:20px;
+}
+#pubs-list li:hover div.abstract { display:block; }
+#pubs-list div.abstract { 
+	display:none; position:absolute; left:100%; top:0; width:365px; padding:0.5em 3em 0.5em 1em;
+	background-color:#def3fd;  text-align:left;
+	-webkit-border-top-right-radius:20px;
+	-webkit-border-bottom-right-radius:20px;
+	-webkit-border-bottom-left-radius:20px;
+	-moz-border-radius-topright:20px;
+	-moz-border-radius-bottomright:20px;
+	-moz-border-radius-bottomleft:20px;
+} 
+#pubs-list div.abstract img { float:left; }
+#pubs-list li p.pub-authors { font-size:smaller; color:gray; }
+#pubs-list li > h3 { margin-bottom:-0.5em; }
+#pubs-list li > h3 a { color:black; }
+#pubs-list li:hover { background-color:#def3fd; }
+#pubs-list li:hover > h3 a { color:#006599;  }
+
+/* Publication Show */
+#pubs-show-sidebar { float:left; width:20em; }
+#pub-show-info { margin-left:22em; }
+#pub-show-info h3.title { font-size:x-large; line-height:1.2em;}
+#pub-show-info p.authors { font-size:smaller; color:gray; }
+
 
 #footer p { font-size:x-small; color:gray; }
 #footer #copyright { float:left; }
